# rkui

./: .gitignore  Cargo.toml  README.md  address.proto  build.rs  example.proto  gen_msg.sh  tauri.conf.json
.github/: vcpkg-ports.txt
.github/workflows/: release.yml
capabilities/: default.json
icons/: icon.icns
src/: app.rs  kafka.rs  kafka_adapter.rs  kafka_adapter_filtered.rs  lib.rs  main.rs
src/kafka/: assignment.rs  consumer.rs  decoder.rs  meta.rs  mod.rs  security.rs  service.rs  types.rs
src/kafka/reader/: merge.rs  merge_newest.rs  merge_oldest.rs  mod.rs  sequential.rs
src/proto_decoder/: mod.rs
src/utils/: kafka.rs  mod.rs
tests/: config_tests.rs  decoder_tests.rs  proto_decode.rs
web/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: ConfigurationConnection.tsx  ConfigurationMessages.tsx  ConfigurationModal.tsx  ConfigurationSecurity.tsx  FilterPanel.tsx  MessageDetailModal.tsx  MessageFilterModal.tsx  MessagesPagination.tsx  MessagesTable.tsx  SettingsPanel.tsx
web/src/components/ui/: button.tsx  input.tsx  textarea.tsx
